# semantic_project

./: CMakeLists.txt  README.md  config.yml  draw.cpp  main.cpp  pixel_classes.cpp  segmentations.cpp  useful_functions.cpp
dl/: cnn_segmentation.ipynb
samples/: draw_image  rot_model.sav
samples/matrices/: confusion_matrix_for_28.csv  confusion_matrix_for_30.csv  confusion_matrix_for_32.csv  confusion_matrix_for_testing.csv  confusion_matrix_on_itself_data.csv
samples/visualization/: 32.yml
testing data/: evaluate.py
training data/: train.py
